--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -153,7 +153,9 @@ export default defineContentConfig({
 #### `auth`
 This option allows for basic and token-based authentication for Git repositories.
 
-::warning{icon="i-lucide-shield-alert"} Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime. ::
+::warning{icon="i-lucide-shield-alert"}
+Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
+::
 
 **Example:**
 
