docs(studio): release new studio module alpha

--- a/docs/content/docs/9.studio/1.setup.md
+++ b/docs/content/docs/9.studio/1.setup.md
@@ -1,117 +1,157 @@
 ---
-title: Setup Nuxt Studio
-seo:
-  title: Introduction and setup of Nuxt Studio - the visual CMS platform of Nuxt
-    Content
-  description: Studio is a the Git-based CMS platform for Nuxt Content websites,
-    providing an intuitive interface to edit your Markdown, YAML and JSON files
-    and publish your changes to GitHub.
+title: Setup
+description: Install and configure the self-hosted Nuxt Studio module to enable
+  visual content editing directly on your production website.
 navigation:
   title: Setup
-description: Studio is the intuitive CMS interface to edit Nuxt Content
-  websites. Edit your Markdown, YAML and JSON files and publish your changes to
-  GitHub.
+seo:
+  title: Nuxt Studio Setup Guide
+  description: Learn how to install and configure the Nuxt Studio module for your
+    Nuxt Content website. Edit content in production with GitHub authentication.
+visual content editing directly on your production website:
+  " navigation":
+    title: Setup
+    icon: i-lucide-settings
+Nuxt Content website:
+  " Edit content in production with GitHub authentication":
+    - null
 ---
 
-Studio is an intuitive CMS interface to edit your Nuxt Content websites.
+::warning
+This documentation only refers to the new open source Studio module. Click here if you want to access the old standalone platform documentation.
+::
 
-It takes advantage of the `Preview API` included in Nuxt Content to propose the best editing experience for your content files. Editors can benefit from a user-friendly interface to edit their `Markdown`, `YAML` or `JSON` files.
+## Install
 
-Developers can customize the editing experience and provide tools to the editor who can focus on content without requiring any technical expertise.
+Add the Nuxt Studio module to your project:
 
-:video{autoplay controls loop poster="/home/videos/HomeNotionLikePoster.webp" src="https://res.cloudinary.com/nuxt/video/upload/v1733494722/contentv3final_rc8bvu.mp4"}
+::code-group
+```bash [pnpm]
+pnpm add nuxt-studio
+```
 
-## Authentication
+```bash [npm]
+npm install nuxt-studio
+```
 
-The Studio admin is located on [nuxt.studio](https://nuxt.studio). From there you can either login with GitHub or with Google. Both methods give you the same editing rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
+```bash [yarn]
+yarn add nuxt-studio
+```
+
+```bash [bun]
+bun add nuxt-studio
+```
+::
+
+Alternatively, use the Nuxt CLI to automatically add the module:
+
+```bash
+npx nuxi module add nuxt-studio
+```
+
+## Configure
+
+Add the module to your `nuxt.config.ts` and configure your GitHub repository:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: [
+    '@nuxt/content',
+    'nuxt-studio'
+  ],
+  
+  studio: {
+    // Studio admin route (default: '/_studio')
+    route: '/_studio',
+    
+    // GitHub repository configuration (required)
+    repository: {
+      provider: 'github', // only GitHub is currently supported
+      owner: 'your-username', // your GitHub username or organization
+      repo: 'your-repo', // your repository name
+      branch: 'main', // the branch to commit to
+      rootDir: '' // optional: if your Nuxt app is in a subdirectory
+    }
+  }
+})
+```
+
+::prose-tip
+If your Nuxt Content application is in a monorepo or subdirectory, specify the `rootDir` option to point to the correct location.
+::
+
+## Create GitHub OAuth App
+
+Nuxt Studio uses GitHub OAuth for authentication.
+
+::prose-steps
+> If you changed the `route` option in your config, update the callback URL accordingly (the route set instead of `/studio`)
+
+### Navigate to GitHub Developer Settings
+
+Go to [GitHub Developer Settings](https://github.com/settings/developers) and click **New OAuth App**
+
+### Configure the OAuth Application
+
+Fill in the required fields:
+
+- **Application name**: Your app name
+- **Homepage URL**: Your production website homepage URL
+- **Authorization callback URL**: `https://yourdomain.com/_studio/auth/github`:tip [If you want to try studio on project running in local, you can simply set the callback url to your local url `http://localhost:3000`.]
+
+### Copy Your Credentials
+
+After creating the OAuth app, you'll receive:
+
+- A **Client ID** (visible immediately)
+- A **Client Secret** (click **Generate a new client secret**)
+
+### Set your environment Variables
+
+Add the GitHub OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
+
+```bash [.env]
+STUDIO_GITHUB_CLIENT_ID=your_github_client_id
+STUDIO_GITHUB_CLIENT_SECRET=your_github_client_secret
+```
+::
+
+## Deployment
 
 ::warning
-Google authentication is adapted for non technical users. Google users have to join a team with existing projects to edit them.
+The new Nuxt Studio module requires a server-side route for authentication.
+While static generation remains supported with [Nuxt hybrid rendering](https://nuxt.com/docs/4.x/guide/concepts/rendering#route-rules), your site must be **deployed on a platform that supports server-side rendering (SSR)**.
 ::
 
-## Connect your Nuxt Content Repository
+### Accessing Studio
 
-Once you are logged in the admin, you have the possibility to import your Nuxt Content repository from the interface.
+After deployment, access the Studio interface by navigating to your configured route (default: `/_studio`):
 
-::tip
-Two options are available, you can either import an existing repository or use one of our [templates](/templates).
+1. Click **Login with GitHub** if it does not directly redirect to the OAuth app authorization page
+2. Authorize the OAuth application
+3. You'll be redirected back to Studio, ready to edit your content
+
+::prose-note
+Secure OAuth-based login with **Google** should be available quickly in the Beta release.
 ::
 
-The only requirement is to host your repository on GitHub. From the interface, connect to our [GitHub app](/docs/studio/github), you'll be then able to link a GitHub repository to your Studio project.
+## Development mode
 
-Once the project is created, you can start editing your files with the Studio editors and publish your changes.
-
-## **Enable the Full Editing Experience**
-
-To unlock the complete range of features in Studio, make sure your project URL is properly configured in the deployment section.
-
-**This will enable all Studio features including:**
-
-- **Live preview of your website:** instantly see changes reflected on your site as you work.
-- **Dynamic form generation:** Automatically generate forms to edit your files based on your Nuxt Content [collections](/docs/collections/define).
-- **Enhanced markdown editors:** enjoy an improved editing experience, including the ability to list and integrate [Vue components](/docs/studio/content#vue-components) that you’ve exposed.
-- **Automatic app configuration:** generate [application configurations](/docs/studio/config) based on the schema you’ve defined.
-
-::tip
-We are proposing a GitHub Pages deployment. By using it, we will handle all the requirements for you. However, if you want to use the deployment platform of your choice, please follow the simple guideline below.
-::
-
-To be able to set your URL in Studio, you just need to set the `Preview API` in the content configuration of your `nuxt.config.ts` file.
+Nuxt Studio includes an **experimental** development mode that enables real-time file system synchronization:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  content: {
-    preview: {
-      api: 'https://api.nuxt.studio'
+  studio: {
+    development: {
+      sync: true // Enable development mode
     }
   }
 })
 ```
 
-Once deployed, you can ensure the `Preview API` has been activated by navigating to the `/__preview.json` page on your site. This metadata page is automatically generated by the Content module and must be accessible to connect your URL in the self-hosted section of Studio.
+When enabled, Nuxt Studio will:
 
-### Troubleshooting
-
-The `__preview.json` file is generated but you encounter a `Forbidden error: invalid property check` when setting your URL in the self-hosted section, follow these steps:
-
-::prose-steps{level="4"}
-
-#### Ensure the `gitInfo` field is set and accurate in the `__preview.json` file
-
-```json [https://your-website.com/__preview.json]
-"gitInfo": {
-  "name": "content",
-  "owner": "nuxt",
-  "url": "https://github.com/nuxt/content"
-},
-```
-
-  :::warning
-  This information should be populated automatically in most cases. We support most popular providers (NuxtHub, Vercel, Netlify, etc.), but if you're using a non supported provider or a custom one, it may not be fetched correctly.
-  :::
-
-<!-- markdownlint-disable-next-line -->
-
-#### Override `gitInfo` in your `nuxt.config.ts`
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  content: {
-    preview: {
-      api: 'https://api.nuxt.studio',
-      gitInfo: {
-        name: 'Your repository name',
-        owner: 'Your repository owner/organization',
-        url: 'Your GitHub repository URL'
-      }
-    }
-  }
-})
-```
-
-<!-- markdownlint-disable-next-line -->
-
-#### Ensure these fields are correctly set in `__preview.json`
-
-The `Forbidden error` should be resolved and you should be able to set your URL on Nuxt Studio. If not, please contact us on the [Discord server](https://discord.gg/sBXDm6e8SP).
-::
+- ✅ Write changes directly to your local `content/` directory
+- ✅ Write media changes to your local `public/` directory
+- ❌ Listen for file system changes and update the editor
+- ❌ Commit changes to your repository (use your classical workflow instead)
