--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -1,24 +1,16 @@
 ---
 title: Setup
-description: Install and configure the self-hosted Nuxt Studio module to enable
-  visual content editing directly on your production website.
+description: Learn how to install and configure Nuxt Studio to edit your content in production with GitHub authentication.
 navigation:
   title: Setup
 seo:
   title: Nuxt Studio Setup Guide
-  description: Learn how to install and configure the Nuxt Studio module for your
-    Nuxt Content website. Edit content in production with GitHub authentication.
-visual content editing directly on your production website:
-  " navigation":
-    title: Setup
-    icon: i-lucide-settings
-Nuxt Content website:
-  " Edit content in production with GitHub authentication":
-    - null
+  description: Learn how to install and configure the self-hosted Nuxt Studio module for your Nuxt Content website. Edit content in production with GitHub authentication.
 ---
 
-::warning
-This documentation only refers to the new open source Studio module. Click here if you want to access the old standalone platform documentation.
+::tip{to="https://nuxt.studio/docs/setup"}
+This documentation covers only the new open-source Nuxt Studio module.
+Click here to view the documentation for the legacy standalone platform.
 ::
 
 ## Install
