--- a/docs/content/docs/9.studio/5.medias.md
+++ b/docs/content/docs/9.studio/5.medias.md
@@ -1,24 +1,30 @@
 ---
 title: Manage and integrate Medias in Nuxt Content Studio CMS
+description: Explore how to browse and manage media files, and integrate them into your projects using Nuxt Content Studio CMS features.
 navigation:
   title: Media Library
-description: Explore how to browse and manage media files, and integrate them
-  into your projects using Nuxt Content Studio CMS features.
 ---
 
 ## Browse your medias
 
-All medias located in the `/public` directory are available in the **Media** tab of the Studio platform.
-
-![Media gallery on Studio](/docs/studio/editors-medias.webp)
+All medias located in the `/public` directory are available in the **Media** tab of the Studio interface.
 
 It's an intuitive interface for non technical users to manage their `/public` directory.
 
-Users can easily browse folders, upload new media at any level, and drag and drop media into other folders, making medias organization straightforward.
+Users can easily browse folders, upload new media at any level, and drag and drop media, making medias organization straightforward.
 
 The interface is designed to be intuitive for non-technical users. It can be viewed as a user friendly IDE.
 
 ## Use it in the Notion-like editor
+
+::warning
+**Alpha Release**
+
+:br
+
+The visual editor isn’t available yet — it’s coming in the beta release.
+For now, this section covers the legacy documentation from the original Nuxt Studio platform.
+::
 
 Users can simply drag and drop images directly into the editor. An upload modal will open to let you choose the destination folder.
 
