--- a/docs/content/docs/9.studio/4.content.md
+++ b/docs/content/docs/9.studio/4.content.md
@@ -1,14 +1,21 @@
 ---
 title: Edit your content
+description: Discover and select your favorite way to manage your content between the visual or the code editor.
 navigation:
   title: Content Editors
-description: Discover and select your favorite way to manage your content
-  between the visual or the code editor.
 seo:
   title: Edit your Nuxt Content website with our editors
-  description: Overview of our different Studio CMS editors to manage your content
-    and your medias. Choose between our visual editors and our code editor.
+  description: Overview of our different Studio CMS editors to manage your content and your medias. Choose between our visual editors and our code editor.
 ---
+
+::warning
+**Alpha Release**
+
+:br
+
+The current version only includes the code editor for Markdown, YAML, and JSON files.
+For now, this section covers the legacy documentation from the original Nuxt Studio platform.
+::
 
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our differents editors:
 
@@ -16,13 +23,27 @@ Nuxt Studio offers a versatile workspace for both developers and content writers
 - [Form editor](#form-editor) for `YAML` and `JSON` files
 - [Code editor](#code-editor) for any kind of files (for technical users only)
 
-::tip
-You can choose your favorite editor from the settings page of your project.
-::
-
 Each editor serves its own purpose. Some users are used to code edition, while others prefer a non-technical, visual approach. At the end, **code syntax is the final output** for both editors.
 
+## Code editor
+
+![Edit directly your raw content with our code editor](/docs/studio/code-editor.webp)
+
+It provides full control over your content, allowing you to write raw content directly:
+
+- [MDC](/docs/files/markdown) syntax for `Markdown` files
+- [JSON](/docs/files/json) or [YAML](/docs/files/yaml) syntax
+
 ## Notion-like editor (`Markdown` files)
+
+::warning
+**Alpha Release**
+
+:br
+
+The visual editor isn’t available yet — it’s coming in the beta release.
+For now, this section covers the legacy documentation from the original Nuxt Studio platform.
+::
 
 ![edit your website with a visual interface](/docs/studio/visual-markdown-editor.webp)
 
@@ -37,6 +58,8 @@ You want to know how we've built this editor and how it works under the hood? Ch
 [Frontmatter](/docs/files/markdown#frontmatter) is a convention of Markdown-based CMS to provide meta-data to pages, like description or title or any other data you would like to store as `key: value` pair.
 
 Based on the user [collection and schema](/docs/collections/define) provided, a form is generated to edit this metadata from the editor.
+
+:video{autoplay controls loop poster="/home/videos/HomeNotionLikePoster.webp" src="https://res.cloudinary.com/nuxt/video/upload/v1739982761/frontmatterform_yjafgt.mp4"}
 
 ::prose-note{to="#form-editor-yaml-and-json-files"}
 Check this section to learn more about form generation based on schema.
@@ -117,11 +140,11 @@ The visual editor simplifies the component edition, allowing you to integrate an
 All components in the `/components/content` folder are available in the editor. Studio users can type `/` anywhere while editing to access the list of available components.
 
   :::tip{to="/docs/studio/debug"}
-  Take a look at this section to validate your 
+  Take a look at this section to validate your
   
   `Vue`
   
-   component integration in the editor in local development.
+  component integration in the editor in local development.
   :::
 ::
 
@@ -146,6 +169,15 @@ export default defineNuxtConfig({
 ```
 
 ## Form editor
+
+::warning
+**Alpha Release**
+
+:br
+
+The visual editor isn’t available yet — it’s coming in the beta release.
+For now, this section covers the legacy documentation from the original Nuxt Studio platform.
+::
 
 ![YAML and JSON edition with auto generated form](/blog/frontmatters.png)
 
@@ -246,16 +278,3 @@ This option can be set to avoid the display of a field in the Studio editor.
 ::prose-tip
 Studio inputs are fully extensible. We can create as many input as we want based on our users needs.
 ::
-
-## Code editor
-
-![Edit directly your raw content with our code editor](/docs/studio/code-editor.webp)
-
-Even though the two previous editors are dedicated to a specific file extension (`md` or `yaml`/`json`). The code editor can be used with any kind of file.
-
-It provides full control over your content, allowing you to write raw content directly:
-
-- [MDC](/docs/files/markdown) syntax for `Markdown` files
-- [JSON](/docs/files/json) or [YAML](/docs/files/yaml) syntax
-
-When your file is saved with the code editor, the content is stored exactly as you've written it, preserving all specific syntax and formatting. This editor is ideal for users comfortable with code syntax (`Markdown`, `YAML` or `JSON`) who want precise control over structure of their content.
