--- a/docs/content/docs/9.studio/3.github.md
+++ b/docs/content/docs/9.studio/3.github.md
@@ -1,44 +1,120 @@
 ---
-title: Real time synchronization between Studio and GitHub
-description: Nuxt Studio is natively synced with GitHub. Install the Nuxt Studio
-  GitHub app and enable content publication on GitHub directly from Studio.
+title: Synchronization
+description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
 navigation:
   title: Synchronization
+seo:
+  title: Real time synchronization between Studio and GitHub
+  description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
 ---
 
-::tip
-This section explains the syncronization behaviour between Studio and GitHub. This process is handled directly from the platform and does not require any external action. This page purpose is purely informational.
+This page explains how Nuxt Studio keeps your content synchronized between the browser (your production site) and your GitHub repository.
+
+::prose-note
+This section is informational. Synchronization happens automatically after setup and requires no manual action.
 ::
 
-## Overview
+## Architecture Overview
 
-Nuxt Studio integrates with the [GitHub](https://github.com) API, enabling smooth synchronization between Studio and your GitHub repositories. This first-class integration is made possible through the utilization of [GitHub Apps](https://docs.github.com/en/developers/apps/getting-started-with-apps/about-apps#about-github-apps).
+The self-hosted Nuxt Studio module uses a three-tier system for storage:
 
-## Installation
+### Production Database (SQLite WASM)
 
-During Studio project creation, you'll need to install the [Nuxt Studio GitHub App](https://github.com/apps/nuxt-studio) in your personal account or in the organizations you manage. Installing a GitHub App requires either organization ownership or admin permissions in a repository. If you lack the necessary permissions, the repository owner will need to approve the request.
+When the application loads in the browser, Nuxt Content v3 downloads a SQLite database dump from the server and initializes a local WASM database. :br
+This local database contains all content from the `content/` directory of your deployed branch.
 
-You can access the installation page from anywhere on the app by clicking on [Install with GitHub](https://github.com/apps/nuxt-studio/installations/new).
+::warning
+This browser-side database stays in sync with GitHub as long as your last deployment was built successfully and your CI/CD pipeline completed without errors.
+::
 
-### Permissions
+### Draft Storage (IndexedDB)
 
-During the installation of our GitHub app, you will be prompted to grant certain permissions:
+Studio maintains a separate **draft layer** using [unstorage](https://unstorage.unjs.io/), backed by IndexedDB. :br
+When you edit content, your changes are stored as *drafts* in this layer. :br
+Each time the Studio app loads, these drafts are merged with the SQLite database to render a *drafted* version of your production site.
 
-- Read access to `actions`, `metadata`, `members`, and `plan`
-- Read and write access to `secrets`, `administration`, `contents`, `pages`, `pull requests` and `workflows`
+::note
+Drafts are stored only in your local browser. They are not shared between editors or devices.
+::
 
-We need read access to `actions` to send a notification when a workflow run fails on a pull request or on the repository default branch. `metadata` is mandatory to fetch repository data, `members` to import your organization members and repository collaborators and `plan` is used to propose features based on your GitHub account plan.
+### GitHub Repository
 
-Nuxt Studio acts on your behalf to create repositories, branches, pull requests, and perform commits and merges. We also offer one-click deployment to GitHub Pages with instant preview of workflows and environment variables secrets management. To accomplish this, we need read and write access to `administration`, `contents`, `pages`, `pull requests`, `workflows` and `secrets`.
+When you publish, Studio commits your draft changes directly to your GitHub repository through the GitHub API. :br
+Your CI/CD pipeline then rebuilds and redeploys your site automatically.
 
-### Repositories Installations
+::warning
+After deployment, you need to wait for your build to complete successfully, then refresh your site to update your browser database with your latest content.
+::
 
-When installing our GitHub app, you will be prompted to select all repositories or a subset of them. This selection can be changed at any time by going to the [GitHub app settings](https://github.com/apps/nuxt-studio/installations/new).
+::tip
+The Studio module will automatically notify you when a new deployment is detected.
+::
 
-By clicking on `Install`, Nuxt Studio will install each repository you have selected, enabling you to perform all the actions listed above.
+## How Synchronization Works
 
-## Uninstall
+### Initial Load
 
-All the data imported from GitHub is directly associated with your GitHub app installation. If you uninstall the GitHub app, all the associated data will be deleted.
+::prose-steps{level="4"}
+#### Database Initialization
 
-If you delete your GitHub repository, the associated Nuxt Studio project will be automatically removed. However, if this project was subscribed to a Team plan, the subscription will not be canceled automatically. You will need to manually end the subscription via [Lemon Squeezy]() or [contact us](team@nuxt.studio) for assistance.
+Nuxt Content downloads the SQLite database dump generated during the build process. :br
+This file contains all parsed content from your `content/` directory.
+
+#### Draft Recovery
+
+Studio checks IndexedDB for any existing drafts from previous sessions and loads them into the SQLite database.
+
+#### Preview
+
+Studio refreshes the site preview so you can view your latest drafts and edits directly on your production website.
+::
+
+### Editing Content
+
+When you modify content in Studio:
+
+::prose-steps{level="4"}
+#### Draft Modification
+
+Changes are saved immediately in IndexedDB as draft items with a status of `created`, `modified`, or `deleted`.
+
+#### Database Update
+
+The local SQLite database is updated to include your draft content, allowing instant visual preview.
+
+#### Conflict Detection
+
+Studio compares your draft content against the latest version on GitHub to detect possible conflicts.
+
+Conflicts can occur when:
+
+- Someone pushes a commit that modifies the same file and its version is currently building.
+- A deployment fails or hasn’t completed, leaving the production database out of date and unsync with GitHub.
+::
+
+### Publishing Changes
+
+When you publish your edits:
+
+::prose-steps{level="4"}
+#### Draft Collection
+
+Studio gathers all draft items that contain changes.
+
+#### GitHub Commit
+
+Using the GitHub API, Studio creates a new commit with all updated files.
+
+#### Deployment Trigger
+
+Your CI/CD platform detects the commit and automatically rebuilds and redeploys your website.
+
+#### Deployment Wait
+
+After publication, Studio clears the local drafts and waits for the deployment to complete. :br
+During this time, a loading state is shown while the production SQLite database catches up with your latest commit.
+
+  :::warning
+  Until your commit is deployed, Studio remains in a pending state where the production database is not yet up to date.
+  :::
+::
