docs: final touches 💅
Co-Authored-By: Baptiste Leproux <leproux.baptiste@gmail.com>

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -1,5 +1,5 @@
 ---
-title: Setup
+title: Setup Nuxt Studio
 description: Learn how to install and configure Nuxt Studio to edit your content in production with GitHub authentication.
 navigation:
   title: Setup
@@ -8,7 +8,7 @@ seo:
   description: Learn how to install and configure the self-hosted Nuxt Studio module for your Nuxt Content website. Edit content in production with GitHub authentication.
 ---
 
-::tip{to="https://nuxt.studio/docs/setup"}
+::note{to="https://nuxt.studio/docs/setup"}
 This documentation covers only the new open-source Nuxt Studio module.
 Click here to view the documentation for the legacy standalone platform.
 ::
@@ -37,7 +37,7 @@ bun add nuxt-studio
 
 Alternatively, use the Nuxt CLI to automatically add the module:
 
-```bash
+```bash [Terminal]
 npx nuxi module add nuxt-studio
 ```
 
@@ -56,28 +56,27 @@ export default defineNuxtConfig({
     // Studio admin route (default: '/_studio')
     route: '/_studio',
     
-    // GitHub repository configuration (required)
+    // GitHub repository configuration (owner and repo are required)
     repository: {
       provider: 'github', // only GitHub is currently supported
       owner: 'your-username', // your GitHub username or organization
       repo: 'your-repo', // your repository name
-      branch: 'main', // the branch to commit to
-      rootDir: '' // optional: if your Nuxt app is in a subdirectory
+      branch: 'main', // the branch to commit to (default: main)
+      rootDir: '' // optional: if your Nuxt app is in a subdirectory (default: '')
     }
   }
 })
 ```
 
-::prose-tip
+::callout
 If your Nuxt Content application is in a monorepo or subdirectory, specify the `rootDir` option to point to the correct location.
 ::
 
-## Create GitHub OAuth App
+## GitHub OAuth App
 
 Nuxt Studio uses GitHub OAuth for authentication.
 
 ::prose-steps
-> If you changed the `route` option in your config, update the callback URL accordingly (the route set instead of `/studio`)
 
 ### Navigate to GitHub Developer Settings
 
@@ -86,10 +85,11 @@ Go to [GitHub Developer Settings](https://github.com/settings/developers) and cl
 ### Configure the OAuth Application
 
 Fill in the required fields:
-
 - **Application name**: Your app name
-- **Homepage URL**: Your production website homepage URL
-- **Authorization callback URL**: `https://yourdomain.com/_studio/auth/github`:tip [If you want to try studio on project running in local, you can simply set the callback url to your local url `http://localhost:3000`.]
+- **Homepage URL**: `https://yourdomain.com`
+- **Authorization callback URL**: `https://yourdomain.com`
+
+:note[If you want to try studio locally, set the callback url to your local url `http://localhost:3000`]
 
 ### Copy Your Credentials
 
@@ -103,17 +103,31 @@ After creating the OAuth app, you'll receive:
 Add the GitHub OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
 ```bash [.env]
-STUDIO_GITHUB_CLIENT_ID=your_github_client_id
-STUDIO_GITHUB_CLIENT_SECRET=your_github_client_secret
+STUDIO_GITHUB_CLIENT_ID=<your_github_client_id>
+STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
 ```
 ::
 
 ## Deployment
 
-::warning
-The new Nuxt Studio module requires a server-side route for authentication.
-While static generation remains supported with [Nuxt hybrid rendering](https://nuxt.com/docs/4.x/guide/concepts/rendering#route-rules), your site must be **deployed on a platform that supports server-side rendering (SSR)**.
-::
+Nuxt Studio requires a server-side route for authentication.
+
+While static generation remains supported with [Nuxt hybrid rendering](https://nuxt.com/docs/4.x/guide/concepts/rendering#hybrid-rendering), your site must be **deployed on a platform that supports server-side rendering (SSR)** using `nuxt build` command.
+
+If you want to pre-render all your pages, use the following configuration:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  nitro: {
+    prerender: {
+      // Pre-render the homepage
+      routes: ['/'],
+      // Then crawl all the links on the page
+      crawlLinks: true
+    }
+  }
+})
+```
 
 ### Accessing Studio
 
@@ -123,8 +137,12 @@ After deployment, access the Studio interface by navigating to your configured r
 2. Authorize the OAuth application
 3. You'll be redirected back to Studio, ready to edit your content
 
-::prose-note
+::note
 Secure OAuth-based login with **Google** should be available quickly in the Beta release.
+::
+
+::tip
+You can also use the shortcut :kbd{value="meta"} + :kbd{value="."} to redirect to the Studio route.
 ::
 
 ## Development mode
