docs: bold move suggestion
Co-Authored-By: Baptiste Leproux <leproux.baptiste@gmail.com>

--- a/docs/content/docs/9.studio/1.introduction.md
+++ b/docs/content/docs/9.studio/1.introduction.md
@@ -12,6 +12,10 @@ navigation:
 
 When NuxtLabs joined Vercel, the team promised to release [nuxt.studio](https://nuxt.studio) as a free open-source, self-hosted module for Nuxt projects.
 
+::u-button{to="https://github.com/nuxt-content/studio" icon="i-simple-icons-github" target="_blank" color="neutral" variant="subtle"}
+Discover the Nuxt Studio module on GitHub.
+::
+
 That promise is now fulfilled. Thanks to vercel support the first version of the **Nuxt Studio module** is available.
 
 You can now enable **content editing directly in production**, with real-time preview and GitHub integration, all from within your own Nuxt application.
