another bold move
Co-Authored-By: Baptiste Leproux <leproux.baptiste@gmail.com>

--- a/docs/content/docs/9.studio/1.introduction.md
+++ b/docs/content/docs/9.studio/1.introduction.md
@@ -20,12 +20,8 @@ That promise is now fulfilled. Thanks to vercel support the first version of the
 
 You can now enable **content editing directly in production**, with real-time preview and GitHub integration, all from within your own Nuxt application.
 
-::prose-note
-**Alpha Release**
-
-:br
-
-The current version includes a Monaco code editor for Markdown, YAML, and JSON files. The visual Notion-like editor will be available in the beta release.
+::u-button{to="/admin?id=posts/blog/studio-module-alpha.md" icon="i-lucide-mouse-pointer-click" external color="neutral"}
+Try editing this page
 ::
 
 ## How does it differ from the standalone platform?
