docs: use latest nuxt-studio
Co-Authored-By: Baptiste Leproux <leproux.baptiste@gmail.com>

--- a/docs/content/docs/9.studio/1.introduction.md
+++ b/docs/content/docs/9.studio/1.introduction.md
@@ -20,7 +20,7 @@ That promise is now fulfilled. Thanks to vercel support the first version of the
 
 You can now enable **content editing directly in production**, with real-time preview and GitHub integration, all from within your own Nuxt application.
 
-::u-button{to="/admin?id=docs/docs/9.studio/1.introduction.md" icon="i-lucide-mouse-pointer-click" external color="neutral"}
+::u-button{to="/admin?redirect=/docs/studio/introduction" icon="i-lucide-mouse-pointer-click" external color="neutral"}
 Try editing this page
 ::
 
