Change nuxt-studio installation to alpha version
Updated installation commands for nuxt-studio to use the alpha version.

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -19,26 +19,26 @@ Add the Nuxt Studio module to your project:
 
 ::code-group
 ```bash [pnpm]
-pnpm add nuxt-studio
+pnpm add nuxt-studio@alpha
 ```
 
 ```bash [npm]
-npm install nuxt-studio
+npm install nuxt-studio@alpha
 ```
 
 ```bash [yarn]
-yarn add nuxt-studio
+yarn add nuxt-studio@alpha
 ```
 
 ```bash [bun]
-bun add nuxt-studio
+bun add nuxt-studio@alpha
 ```
 ::
 
 Alternatively, use the Nuxt CLI to automatically add the module:
 
 ```bash [Terminal]
-npx nuxi module add nuxt-studio
+npx nuxi module add nuxt-studio@alpha
 ```
 
 ## Configure
